fix: ff alignment issues  875 and 911 (#912)
issues fixed: #911 #875 


@jquense can you please make sure that changes made in this commit are reverted: https://github.com/jquense/react-widgets/commit/d745887af4e9b11739c637e196367b062e9e8fe0

I tried to do that here but I am not sure if I was successful.

--- a/packages/react-widgets/src/less/widget.less
+++ b/packages/react-widgets/src/less/widget.less
@@ -116,6 +116,10 @@
   }
 }
 
+.rw-multiselect > .rw-widget-picker {
+  height: auto;
+}
+
 .rw-select {
   cursor: pointer;
 
@@ -158,7 +162,7 @@
   padding: 0 @input-padding-horizontal;
   background-color: @input-bg;
 
-  &[type='text']::-ms-clear {
+  &[type="text"]::-ms-clear {
     display: none;
   }
 
@@ -183,7 +187,7 @@
   height: 16px;
 
   &:before {
-    content: '';
+    content: "";
   }
 }
 
@@ -218,5 +222,5 @@
 }
 
 .rw-widget-input.rw-state-focus {
-  box-shadow: ~'@{input-focus-box-shadow}, @{input-box-shadow}';
+  box-shadow: ~"@{input-focus-box-shadow}, @{input-box-shadow}";
 }
